--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 a {
@@ -19,8 +19,4 @@ a {
 
 .navbar{
   z-index: 100;
-}
-
-h{
-  font-family: monospace;
 }
